RESOLVED FIXED17792
REGRESSION(r29349-r29385): Ordering tickets from Sweden's biggest train operator doesn't work
https://bugs.webkit.org/show_bug.cgi?id=17792
Summary REGRESSION(r29349-r29385): Ordering tickets from Sweden's biggest train opera...
Gustav
Reported 2008-03-12 06:53:00 PDT
When following the steps to buy a ticket it is not possible to proceed from the third step 'Time Table'. Clicking the continue button a first time sends you to the same page. After this "reload" a click on any of the buttons on the page gives no visible response. Even a click on the back or the cancel button is not giving any response. This works in Safari 3.
Attachments
Alexey Proskuryakov
Comment 1 2008-03-12 08:23:33 PDT
Alexey Proskuryakov
Comment 2 2008-03-12 10:24:49 PDT
Confirmed with r30966 on Mac, also happens on Windows.
Anders Carlsson
Comment 3 2008-03-14 17:21:23 PDT
Committed revision 31071.
Note You need to log in before you can comment on or make changes to this bug.